2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Remove logging from the router as it interferes with loaded views trying to manage logging options.

2014-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Split out the top level HTTP parsing from the lower level routing of a request to a view.

2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
 Implemented a proper 301, 302, 303, 405, 500 and 501 responses.

2012-07-06  Kirit Saelensminde  <kirit@felspar.com>
 Added an `all` target so it's compatible with other projects.

2012-07-05  Kirit Saelensminde  <kirit@felspar.com>
 Changed the logging to use JSON objects rather than arrays.

2012-04-08  Kirit Saelensminde  <kirit@felspar.com>
 Added support for Windows build.

2012-04-07  Kirit Saelensminde  <kirit@felspar.com>
 Switched away from the use of crack to make use of a special search for the inner content in the template middleware for about 17-18% speed up.
 Switched away from replaceAll to using the string's replace() method for a further 12-14% speed up.

2012-03-04  Kirit Saelensminde  <kirit@felspar.com>
 Added a 412 resaponse.

2012-03-03  Kirit Saelensminde  <kirit@felspar.com>
 A default host configuration can now be set up using an empty host name key in the hosts configuration location.

2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
 Added ChangeLog
 Added a path which can be re-written by views acting as middleware.