@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2011 Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2014 Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -18,8 +18,11 @@ using namespace fostlib;
 
 
 namespace {
-    setting< string > c_host( L"webserver", L"Server", L"Bind to", L"localhost" );
-    setting< int > c_port( L"webserver", L"Server", L"Port", 8001 );
+    setting< string > c_host(L"webserver", L"Server", L"Bind to", L"localhost");
+    setting< int > c_port(L"webserver", L"Server", L"Port", 8001);
+    setting< string > c_mime(L"webserver", L"Server", "MIME types",
+            L"Configuration/mime-types.json");
+    setting< json > c_load("webserver", "Server", "Load", json::array_t());
 }
 
 
@@ -27,34 +30,23 @@ FSL_MAIN(
     L"webserver",
     L"Threaded HTTP server\nCopyright (c) 2002-2011, Felspar Co. Ltd."
 )( fostlib::ostream &o, fostlib::arguments &args ) {
+    // Process command line arguments last
+    args.commandSwitch("p", c_port.section(), c_port.name());
+    args.commandSwitch("h", c_port.section(), c_port.name());
+    args.commandSwitch("m", c_mime.section(), c_mime.name());
+
     // Load MIME types
-    urlhandler::load_mime_configuration("Configuration/mime-types.json");
-
-    // Load the configuration
-    boost::filesystem::wpath configuration_file(
-        fostlib::coerce<boost::filesystem::wpath>(args[1].value("webserver.json")));
-    fostlib::string configuration_data(fostlib::utf::load_file(configuration_file, "{}"));
-    fostlib::json configuration_json(fostlib::json::parse(configuration_data));
-
-    // Set up the settings
-    const fostlib::setting<fostlib::json>
-        host_configuration(fostlib::coerce<fostlib::string>(configuration_file),
-             fostlib::urlhandler::c_hosts,
-            configuration_json["webserver"]["hosts"]),
-        view_configuration(fostlib::coerce<fostlib::string>(configuration_file),
-             fostlib::urlhandler::c_views,
-            configuration_json["webserver"]["views"]);
+    urlhandler::load_mime_configuration(c_mime.value());
 
     // Load any shared objects
-    fostlib::json so(configuration_json["webserver"]["load"]);
+    fostlib::json so(c_load.value());
     std::vector< boost::shared_ptr<fostlib::dynlib> > dynlibs;
     for ( fostlib::json::const_iterator p(so.begin()); p != so.end(); ++p )
         dynlibs.push_back(boost::shared_ptr<fostlib::dynlib>(
             new dynlib(fostlib::coerce<fostlib::string>(*p))));
 
     // Bind server to host and port
-    args.commandSwitch("p", c_port.section(), c_port.name());
-    http::server server( host( args[2].value(c_host.value()) ), c_port.value() );
+    http::server server(host(c_port.value()));
     o << L"Answering requests on "
         L"http://" << server.binding() << L":" << server.port() << L"/" << std::endl;
 
